--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
